Update to support 'deep URL's' and browser refresh and some window resizing issues.